--- a/slides.ipynb
+++ b/slides.ipynb
@@ -8,7 +8,8 @@
     }
    },
    "source": [
-    "<h1>Modeling a Mars Colony</h1>"
+    "<h1>Modeling a Mars Colony</h1>\n",
+    "    <h4>Doug Woodward</h4>"
    ]
   },
   {
@@ -1570,7 +1571,32 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "<h1>Sources</h1>\n",
+    "<ul>\n",
+    "<li>Technological Forecasting and Social Change 61(3):209–214, 1999.\n",
+    "        Carrying Capacity: A Model with Logistically Varying Limits\n",
+    "        PERRIN S. MEYER and JESSE H. AUSUBEL2\n",
+    "</li>\n",
+    "<li>UN Population Division https://esa.un.org/unpd/wpp/</li>\n",
+    "<li>\"The History of the Human Population From the First Beginnings to the Present\" in \"Demography: Analysis and Synthesis: A Treatise in Population\"\n",
+    "        Jean-Noël Biraben, \n",
+    "         (Eds: Graziella Caselli, Jacques Vallin, Guillaume J. Wunsch) Vol 3, Chapter 66, pp 5–18, Academic Press, San Diego \n",
+    "</li>\n",
+    "<li>\n",
+    "Jean-Noël Biraben, \"Le Point sur l'Histoire de la Population du Japon\", Population Vol. 48 (no. 2), pp. 443-472 (1993)\n",
+    "</li>\n",
+    "<li>\"Integrated modelling of global environmental change. An overview of IMAGE 2.4\",\n",
+    "         History Database of the Global Environment.\n",
+    "         K. Klein Goldewijk and G. van Drecht, \n",
+    "         \"HYDE 3.1: Current and historical population and land cover\", \n",
+    "               in Eds. A. F. Bouwman, T. Kram, and K. Klein Goldewijk, \n",
+    "         Netherlands Environmental Assessment Agency (MNP), Bilthoven, The Netherlands.\n",
+    "</li>\n",
+    "<li>Robert M. Zubrin (Pioneer Astronautics), Christopher P. McKay. NASA Ames Research Center (c. 1993). \"Technological Requirements for Terraforming Mars\"\n",
+    "</li>\n",
+    "<li> Clifford, S. M. and T. J. Parker, 2001: The Evolution of the Martian Hydrosphere: Implications for the Fate of a Primordial Ocean and the Current State of the Northern Plains, Icarus 154, 40–79.</li>"
+   ]
   }
  ],
  "metadata": {
