--- a/slides.ipynb
+++ b/slides.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "<b>What model to start with?</b>\n",
     "\n",
-    "<i>Let's rule out exponential for our model because we can assume that there will be a limit on the size of a Mars colony just due to habitable space and technological reasons.</i>"
+    "<p><i>Let's rule out exponential for our model because we can assume that there will be a limit on the size of a Mars colony just due to habitable space and technological reasons.</i></p>"
    ]
   },
   {
