--- a/slides.ipynb
+++ b/slides.ipynb
@@ -249,7 +249,7 @@
     "<hr>\n",
     "<latex>\n",
     "\\[\n",
-    "(t) = K_{1}+ \\frac{K_{2}}{1+\\exp(-r_{k}(t-t_{m_k}))}\n",
+    "K(t) = K_{1}+ \\frac{K_{2}}{1+\\exp(-r_{k}(t-t_{m_k}))}\n",
     "\\]\n",
     "</latex>  \n",
     "<hr>"
