--- a/slides.ipynb
+++ b/slides.ipynb
@@ -639,9 +639,11 @@
    "source": [
     "<h3> Future? </h3>\n",
     "<hr>\n",
-    "So, given what we have so far, we can see that we what could be taken as a logistic growth from 0-1800, excluding the middle ages and black plague, and just as we see the carring capacity start to limit growth, the industrial revolution kicks in, sending us on the exponetial growth pattern we currently see.\n",
+    "So, given what we have so far, we can see that we what can be taken as a logistic growth function from 0-1800, excluding the middle ages and black plague. Just as we see the carrying capacity start to limit growth, the industrial revolution kicks in, sending us on the exponetial growth pattern we currently see.\n",
     "\n",
-    "But what about the future? It is reasonable to take the assumption that as the world population expands we will be limited by the planet's resources. \n",
+    "But what about the future? \n",
+    "\n",
+    "It is reasonable to take the assumption that the world population will be limited by the planet's resources despite technology.\n",
     "\n",
     "And the UN population predictions for future population growth backs this."
    ]
