--- a/slides.ipynb
+++ b/slides.ipynb
@@ -1651,7 +1651,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Ok, that seems a bit more like it!\n",
     "\n",
@@ -1816,7 +1820,10 @@
    "cell_type": "code",
    "execution_count": 133,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
