--- a/slides.ipynb
+++ b/slides.ipynb
@@ -381,8 +381,20 @@
     "    buffer = 80\n",
     "    replay = []\n",
     "    h = 0\n",
-    "    tTot = 0\n",
-    "\n",
+    "    tTot = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "    for i in range(epochs):\n",
     "        print(\"\\n\")\n",
     "        print(\"Init New Game \\n\")\n",
@@ -405,7 +417,20 @@
     "        randMoves = 0\n",
     "        #print(\"&&&&&&&&&&&&&&&&&&&&&&&&&&&&&\")\n",
     "        #print(\"&&&&&&&&&&&&&&&&&&&&&&&&&&&&&\")\n",
-    "        #print(\"&&&&     GAME \",i,\"        &&\")\n",
+    "        #print(\"&&&&     GAME \",i,\"        &&\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "        while(status == 1):\n",
     "            #We are in state S\n",
     "            #Let's run our Q function on S to get Q values for all possible actions\n",
@@ -425,9 +450,20 @@
     "\n",
     "            prev = getCurrentStation(state)\n",
     "            new_state = makeMove(state, action, rM)\n",
-    "            reward = getReward(new_state, rM)\n",
-    "\n",
-    "\n",
+    "            reward = getReward(new_state, rM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "            #Experience replay storage\n",
     "            if (len(replay) < buffer): #if buffer not filled, add to it\n",
     "                replay.append((state, action, reward, new_state))\n",
@@ -464,8 +500,20 @@
     "                state = new_state\n",
     "                reward = getReward(state,rM)\n",
     "                #print(\"---_----__Reward Check: \",reward)\n",
-    "                print(state)\n",
-    "\n",
+    "                print(state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "            t += 1\n",
     "            if reward == 10: # or reward == 10.0: #if reached terminal state, update game status\n",
     "                status = 0\n",
@@ -482,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -506,7 +554,20 @@
     "    print(state)\n",
     "\n",
     "    prev = getCurrentStation(state)\n",
-    "    status = 1\n",
+    "    status = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "    #while game still in progress\n",
     "    while(status == 1):\n",
     "        #print(\"((((((((()))))))\")\n",
@@ -545,7 +606,10 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -3180,7 +3244,10 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -4615,7 +4682,10 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -16088,7 +16158,10 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -24225,7 +24298,10 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -30122,15 +30198,6 @@
     "print(\"Wins: \",total)\n",
     "print(\"Losses: \",numTests-total)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
